agregar logo y estilos para el logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <ul class="navbar">
-            <li>Logo</li>
+            <li>
+                <img src="./media/logo.png" alt="imagen" class="logo" />
+            </li>
             <li>Nuevo post</li>
             <li>Búsqueda</li>
             <li>Iniciar sesión</li>
