--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <header>
         <ul class="navbar">
             <li>Logo</li>
-            <li>Nuevo post</li>
+            <li>
+                <button class="mainButton">Nuevo post</button>
+            </li>
             <li>Búsqueda</li>
             <li>Iniciar sesión</li>
             <li>Registro</li>
