--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
                 <button class="mainButton">Nuevo post</button>
             </li>
             <li>Búsqueda</li>
-            <li>Iniciar sesión</li>
+            <li>
+                <button class="secondaryButton">Login</button>
+            </li>
             <li>
                 <button class="mainButton">Registro</button>
             </li>
