--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/estilos.css" />
     <link rel="shorcut icon" href="./media/favicon.png" type="image/x-icon" /> <!--Favicon-->
+    <script src="https://kit.fontawesome.com/fa92e16db3.js" crossorigin="anonymous"></script>
     <title>Razas de Perros</title>
 </head>
 <body>
@@ -13,7 +14,12 @@
         <ul class="navbar">
             <li>Logo</li>
             <li>Nuevo post</li>
-            <li>Búsqueda</li>
+            <li>
+                <div class="buscar">
+                    <input placeholder="Buscar una raza" />
+                    <i class="fas fa-search"></i>
+                </div>
+            </li>
             <li>Iniciar sesión</li>
             <li>Registro</li>
         </ul>
