--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
     <main>
         <section>
             <h1>Razas de Perros</h1>
+            <ul class="breedCardContainer">
+                <li class="breedCard">
+                    <div class="contenedorImagen">
+                        <img src="./media/border.jpg" alt="Border Collie" />
+                    </div>
+                    Border Collie
+                </li>
+                <li class="breedCard">
+                    <div class="contenedorImagen">
+                        <img src="./media/rhodesian.jpg" alt="Rhodesian" />
+                    </div>
+                    Rhodesian
+                </li>
+            </ul>
         </section>
         <section></section>
     </main>
