--- a/index.html
+++ b/index.html
@@ -40,13 +40,17 @@
                     <div class="contenedorImagen">
                         <img src="./media/border.jpg" alt="Border Collie" />
                     </div>
-                    Border Collie
+                    <span class="breedTitle">
+                        Border Collie
+                    </span>
                 </li>
                 <li class="breedCard">
                     <div class="contenedorImagen">
                         <img src="./media/rhodesian.jpg" alt="Rhodesian" />
                     </div>
-                    Rhodesian
+                    <span class="breedTitle">
+                        Rhodesian
+                    </span>
                 </li>
             </ul>
         </section>
